--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="20">
     <tr>
       <td>
-        <img src="images/suzy1.jpg" alt="My Facebook profile Picture">
+        <img src="images/suzy1.png" alt="My Facebook profile Picture">
       </td>
       <td>
         <h1>Harit Yubon</h1>
