--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <td>
       <table>
         <tr>
-          <td>Photography Development</td>
+          <td>Photography</td>
           <td>⭐⭐⭐⭐</td>
         </tr>
         <tr>
